--- a/Assignment-1/module-1/module-1.html
+++ b/Assignment-1/module-1/module-1.html
@@ -7,11 +7,22 @@
 </head>
 <br>
     <h2>1.Do search for web-site, http, URL etc given topics in lecture?</h2>
-    Ans:- <b style="font-size: 18px, margin-left:30px;">1) Web-site:</b> collection of web pages. <br><br>
+    Ans:- <b style="font-size: 18px, margin-left:30px;">1) Web-site:</b> collection of web pages. <br>
+    <b style="margin-left:30px;">-> three main types:</b><br>
+    <b style="margin-left:30px;"></b>->static websites<br>
+    <b style="margin-left:30px;"></b>->dynamic websites<br>
+    <b style="margin-left:30px;"></b>->e-commerce websites<br></br>
+    <b style="margin-left:30px;">2)Http:</b>hyper text transfer protocol,<br>
+    <b style="margin-left:30px;">used:</b>
+    and is used to load webpages using hypertext links.<br><br>
+    <b style="margin-left:30px;">3)URL:</b>uniform resource locator,<br>
+    <b style="margin-left:30px;"></b>->url is a unique identifier used to locate a resourceon the internet<br> 
+    <b style="margin-left:30px;">Types of URL</b><br>
+    <b style="margin-left:30px;"></b>->gives the address of files created for webpages or other documents like an image, pdf for a doc file.</style><br>
+    <b style="margin-left:30px;"></b>->Absolute URL: This type of URL contains both the domain name and directory/page path. ...<br>
+    <b style="margin-left:30px;"></b>->Relative URL: This type of URL contains the path excluding the domain name.<br>
 
-    <b style="margin-left:30px;">     2)Http:</b>hyper text transfer protocol,and is used to load webpages using hypertext links.<br></br>
-    <b style="margin-left:30px;">3)URL:</b>uniform resource locator,url is a unique identifier used to locate a resourceon the internet</br> 
 
     
 </body>
-</html>
+</html
