--- a/Assignment-1/Module-4 (CSS and CSS 3)/que-1.html
+++ b/Assignment-1/Module-4 (CSS and CSS 3)/que-1.html
@@ -12,6 +12,13 @@
     -> Faster page loading.<br>
     -> Easy to learn.<br>
     -> Easy formating changes...<br>
+    -> Time-saving...<br>
+    -> better device compatibility...<br>
+    -> Easy to creat a webpage. <br>
+    -> all browsers supports html.<br>
+    -> batter website speed<br>
+    -> consistent design<br>
+    
     
 </body>
 </html>
