--- a/Assignment-1/Module-4 (CSS and CSS 3)/que-2.html
+++ b/Assignment-1/Module-4 (CSS and CSS 3)/que-2.html
@@ -11,6 +11,9 @@
     -> Extra work for developers. <br>
     -> uneven browser support.<br>
     -> security issues.<br>
-    -> static language.
+    -> static language.<br>
+    -> There might be cross-browser issues while using CSS.<br>
+    -> There are multiple levels which creates confusion for non-developers and beginners.<br>
+    ->Browser compatibility.
 </body>
 </html>
