--- a/practice/Module-3/Display/inline.html
+++ b/practice/Module-3/Display/inline.html
@@ -8,11 +8,11 @@
         header li{
             list-style: none;
             display: inline;
+
         }
         header li a{
-            /* text-decoration: none; */
+            text-decoration: none;  
         }
-
     </style>
 </head>
 <body>
@@ -23,8 +23,6 @@
             <li><a href="#">Home</a></li>
             <li><a href="#">Home</a></li>
             <li><a href="#">Home</a></li>
-
-
         </ul>
     </header>
     
