--- a/Assignment-1/Module-4 (CSS and CSS 3)/que-2.html
+++ b/Assignment-1/Module-4 (CSS and CSS 3)/que-2.html
@@ -3,7 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>que-2</title>
+    <style>
+        body {background-color: pink;}
+        h1   {color: red;}
+        p    {color: purple;}
+        </style>
 </head>
 <body>
     <h2>2.What are the disadvantages of CSS?</h2>
@@ -15,5 +20,17 @@
     -> There might be cross-browser issues while using CSS.<br>
     -> There are multiple levels which creates confusion for non-developers and beginners.<br>
     -> Browser compatibility.
+
+
+   
+
+
+<body>
+
+<h1>This is a text heading</h1>
+<p>This is a text paragraph.</p>
+ 
+</body>
+</html>
 </body>
 </html>
