--- a/Assignment-1/Module-4 (CSS and CSS 3)/Que-3.html
+++ b/Assignment-1/Module-4 (CSS and CSS 3)/Que-3.html
@@ -5,7 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Que-3</title>
 </head>
-<body>
+<!-- css3 property example -->
+<style>
+    body {
+        background-color: aqua;
+    }
+    
+      div {
+  /* background-color: yellow; */
+  color: red;
+  all: initial;
+  /* animation: mymove 5s infinite; */
+}
+.example1 {
+  border: 10px dashed black;
+  /* padding: 25px; */
+  /* background: url(paper.gif); */
+  background-repeat: no-repeat;
+  background-origin: border-box;
+  border-color: coral
+}
+
+    </style>
+
+      <body>
+        <div class="data">
+            <div class="example1">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi, sequi?
+            </div>
+        </div>
     <h2>What is the diffrence between CSS2 and CSS3?</h2>
     <h2>Ans.</h2>
     <h2>CSS2:</h2>
@@ -30,8 +58,10 @@
     ->With CSS3 the selectors were called as a sequence of simple seletors.com<br>
     ->With CSS3, there is provision for automatically assigning rounded borders to objects21<br>
     ->CSS3 has the capability to split text into various columns so that each text block appears as a layout of the newspaper.<br>
+<!-- css property example -->
+    <h1 style="color:blue;">A Blue Heading</h1>
 
-
+    <p style="color:red;">A red paragraph.</p>
     
 </body>
 </html>
