--- a/Task html/Task js/even value56.html
+++ b/Task html/Task js/even value56.html
@@ -8,11 +8,11 @@
 <body>
     <script>
         let a = parseInt(prompt('Enter a number'));
-          let total_even = 0;
+          // let total_even = 0;
         for (let i = 0; i<= a; i++){
             if (i % 2 == 0){
             document.write(i + '<br>');
-             total_even++;
+             // total_even++;
         }
         }
     </script>
