--- a/Assignment-1/Module-3.html/Que-1.html
+++ b/Assignment-1/Module-3.html/Que-1.html
@@ -9,7 +9,19 @@
      <h2>Ans:</h2> 
         No<br>
         HTML Tags are building blocks of HTML Page.<br>
-        HTML Elements are components that are used in HTML Page.
+        HTML Elements are components that are used in HTML Page.<br>
+
+
+        HTML :   4 basic HTML tags. <br>
+             :   html, title, head and body.<br>
+
+          -> :  <html> is the opening tag and </html> is the closing tag. <br>
+
+
+
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab cupiditate repellat accusamus. <br> a line break.</p>
+          <img src="/examples/images/sky.jpg" alt="">
+          <input type="text" name="username">    
     
 </body>
 
