--- a/Assignment-1/Module-3.html/Que-18.html
+++ b/Assignment-1/Module-3.html/Que-18.html
@@ -10,7 +10,30 @@
     <h2>Ans:</h2>
     SVG stands for Scalable Vector Graphics ·<br>
     SVG is used to define vector-based graphics for the Web ·<br>
-    It is a unique type of image format for vector-based graphics written in Extensible Markup Language (XML).
+    It is a unique type of image format for vector-based graphics written in Extensible Markup Language (XML).<br>
+    Each element and attribute in SVG files can be animated<br>
+    SVG is a W3C recommendation<br>
+    SVG integrates with other standards, such as CSS, DOM, XSL and JavaScript<br>
+    SVG images can be created and edited with any text editor.<br>
+    SVG images can be searched, indexed, scripted, and compressed.<br>
+    SVG images are scalable.<br>
+    SVG images can be printed with high quality at any resolution.<br>
+    SVG images are zoomable.<br>
+    SVG graphics do NOT lose any quality if they are zoomed or resized.<br>
+    SVG is an open standard.<br>
+    SVG files are pure XML.<br>
+
+
+
+<h1>Example:</h1>
+
+
+<h1>SVG</h1>
+
+<svg width="100" height="100" >
+  <circle cx="50" cy="50" r="40" stroke="green" stroke-width="4" fill="yellow" />
+</svg>
 
 </body>
 </html>
+
