--- a/Assignment-1/Module-3.html/Que-19.html
+++ b/Assignment-1/Module-3.html/Que-19.html
@@ -9,11 +9,43 @@
     <h2>19.What is difference between HTML and XHTML?</h2>
     <h2>Ans:</h2>
     <h4>HTML:</h4>  
-    HTML stands for Hypertext Markup Language.<br>
-    Both languages are used to create web and Android applications.<br>
-    <h4>XHTML:</h4>
-     XHTML stands for Extensible Hypertext Markup Language<br>
-    XHTML is basically an extension of HTML, which is stricter than HTML.<br> 
-    Both languages are used to create web and Android applications.
+    <!-- 1.HTML stands for Hypertext Markup Language.<br>
+    2.Both languages are used to create web and Android applications.<br>
+    3.Hypertext Markup Language is a markup language used to create web pages and other information that can be 4.displayed in a web browser.<br>
+    4.HTML allows for loose syntax, with end tags and attributes often being optional.<br>
+    5.HTML allows for multiple DTDs, including HTML 4.01 and HTML5.<br>
+    6.HTML does not support namespaces.<br>
+    7.HTML allows for the use of deprecated attributes.<br>
+    8.HTML will continue to be supported by web browsers.<br>
+    9.HTML continues to evolve, with the latest version being HTML5.<br> -->
+
+
+    <!-- <h4>XHTML:</h4>
+    1.XHTML stands for Extensible Hypertext Markup Language<br>
+    2.XHTML is basically an extension of HTML, which is stricter than HTML.<br> 
+    3.Both languages are used to create web and Android applications.<br>
+    4.eXtensible Hypertext Markup Language is a markup language that is a stricter version of HTML and conforms to 5.XML syntax.<br>
+    5.XHTML requires end tags for all elements and attributes to be quoted.<br>
+    6.XHTML requires the use of a specific DTD, such as XHTML 1.0 Strict or XHTML 1.1.<br>
+    7.XHTML supports namespaces, allowing for the integration of other XML languages.<br>
+    8.XHTML does not allow the use of deprecated attributes and requires all attributes to be lowercase.<br>
+    9.XHTML support by web browsers is limited and it is now largely replaced by HTML5.<br>
+    10.XHTML development has largely been discontinued, with future developments focusing on HTML5.<br> -->
+
+
+    Syntax: XHTML has a stricter syntax than HTML, meaning that it must follow XML rules for proper formatting and structure. HTML, on the other hand, is more flexible in its syntax.<br><br>
+
+    
+    Document Type Definition (DTD): XHTML requires a DTD to be specified, which defines the rules for the structure of the document. HTML does not require a DTD.<br><br>
+
+    Case sensitivity: XHTML is case sensitive, meaning that elements and attributes must be in lower case. HTML is not case sensitive.<br><br>
+
+    Empty Elements: In XHTML, all empty elements must be closed,  <br /> or <img src="image.jpg" alt="image" />. In HTML, some empty elements can be left open, <br> or <img src="image.jpg" alt="image">.<br><br>
+
+    Attribute values: In XHTML, all attribute values must be quoted, while in HTML they can be either quoted or unquoted.<br><br>
+
+    Error handling: XHTML has more strict error handling, with errors resulting in the page not being displayed properly. HTML is more forgiving of errors and will still display the page even if there are mistakes in the code.<br><br>
+
+    Future compatibility: XHTML is designed to be compatible with future technologies and devices, while HTML may not be as compatible in the future.<br><br>
 </body>
 </html>
