--- a/Assignment-1/Module-3.html/Que-20.html
+++ b/Assignment-1/Module-3.html/Que-20.html
@@ -3,14 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Module-3</title>
+    <title>Document</title>
 </head>
 <body>
-    <h2>20.What are logical and physical tags in HTML?</h2>
-    <h2>Ans:</h2>
-    Physical and Logical tags are used in HTML for better visibility and understanding of the text by the user on the web page.<br>
-    both tags differ from each other as suggested by their names. <br>
-    Logical Tags : Logical Tags are used in HTML to display the text according to the logical styles.
-    
+    Logical Tags  :
+Logical Tags are used in HTML to display the text according to the logical styles. the Logical tags commonly used in HTML.
+
+<h1>tag name:</h1>
+-><abbr>abbreviation<br>
+-><acronym>acronym<br>
+-><address>address element<br>
+-><cite>citation<br>
+-><code>code text</code><br>
+-> <del>del</del><br>
+-> <dfn></dfn>a definition term<br>
+-> <ins></ins> ins<br>
+
+<h1>Example:</h1><br><br>
+<abbr title=""> abb</abbr> <br> <br> 
+<address> , 5th & 6th Floor, Royal Kapsons, A- 118, Sector- 136, jamanagar,  
+gujrat (201305) </address> <br> 
+<cite> cite </cite> <br> 
+code> Sample code: system.out.print(); </code> <br> 
+<del>  deleted.</del> <br>
+<ins> inserted content.</ins> <br>
+<dfn> dfn </dfn> <br>
+<p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nam, aliquam.</p> <br>
+<pre> Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, numquam.</pre>   <br><br><br>
+
+<hr>
+
+Physical Tags <br>
+Physical Tags are used in HTML to provide actual physical formatting to the text. the Physical tags commonly used in HTML.
+
+<h1>tag name</h1><br>
+-><b>bold text<br>
+-><big>big text<br>
+-><i>italic text<br>
+-><small>small text<br>
+-><sup>superscripted text<br>
+-><sub>subscripted text<br>
+-><u>Deprecated.</u> <br>
+
+<h1>Example:</h1>
+<b> Bold </b><br>
+<big>This is BIG text </big> <br> 
+<i>This is Italic text </i> <br>
+<small>This is Small text </small><br>
+1<sup>st </sup><br>
+H<sub>2</sub>O<br>
+<u>This is underlined text</u> <br>
 </body>
 </html>
