--- a/Assignment-1/Module-4 (CSS and CSS 3)/gatewave/wave.html
+++ b/Assignment-1/Module-4 (CSS and CSS 3)/gatewave/wave.html
@@ -142,7 +142,8 @@
         }
 
         .d-5 {
-            top: 440px;
+            /* top: 440px; */
+            top: 452px;
             left: 900px;
         }
     </style>
@@ -162,8 +163,10 @@
             </path>
         </svg>
         <div class="team d-1"><img src="https://images.pexels.com/photos/614810/pexels-photo-614810.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="team"></div>
-        <div class="team d-2"><img src="https://w7.pngwing.com/pngs/90/654/png-transparent-skin-care-elastin-human-skin-cream-woman-face-miscellaneous-cream-face-thumbnail.png" alt="team"></div>
-            
+        <!-- <div class="team d-2"><img src="https://w7.pngwing.com/pngs/90/654/png-transparent-skin-care-elastin-human-skin-cream-woman-face-miscellaneous-cream-face-thumbnail.png" alt="team"></div>
+             -->
+
+             <div class="team d-2"><img src="https://img.freepik.com/free-photo/portrait-young-beautiful-woman-with-smoky-eyes-makeup-pretty-young-adult-girl-posing-studio-closeup-attractive-female-face_186202-4439.jpg" alt="team"></div>
         <div class="data">
             <h3>WEB DESIGNER</h3>
             <P>UI/UX DESIGNER</P>
